--- a/.env.example
+++ b/.env.example
@@ -1,23 +1,34 @@
-# Chain / default
+# Core chain settings
 NEXT_PUBLIC_DEFAULT_CHAIN=80000
 NEXT_PUBLIC_USE_SUBGRAPH=true
 ENABLED_CHAINS=80000
 
-# Indexer (Ponder API)
-NEXT_PUBLIC_CLOB_80000_INDEXER_URL=https://orbex-gateway-api.paxeer.app
-NEXT_PUBLIC_CLOB_80000_KLINE_URL=https://orbex-gateway-api.paxeer.app
+# Gateway / Indexer endpoints (Production)
+# App will default to these for both REST and WebSocket
 NEXT_PUBLIC_INDEXER_BASE_URL=https://orbex-gateway-api.paxeer.app
 NEXT_PUBLIC_WEBSOCKET_BASE_URL=wss://orbex-gateway-api.paxeer.app
-NEXT_PUBLIC_WAITLIST_MODE=false
+
+# Chain-specific overrides (take precedence over base URLs)
+NEXT_PUBLIC_CLOB_80000_INDEXER_URL=https://orbex-gateway-api.paxeer.app
+NEXT_PUBLIC_CLOB_80000_KLINE_URL=https://orbex-gateway-api.paxeer.app
+NEXT_PUBLIC_WS_80000_URL=wss://orbex-gateway-api.paxeer.app
+
 # Explorer
 NEXT_PUBLIC_EXPLORER_80000_URL=https://chainscan.paxeer.app
+
+# Feature flags
+NEXT_PUBLIC_WAITLIST_MODE=false
 NEXT_PUBLIC_COMING_SOON_EARN=true
-# Deployed contracts (proxies)
+# Optional flags if you want to toggle gating from the environment
+# NEXT_PUBLIC_COMING_SOON_SPOT=false
+# NEXT_PUBLIC_COMING_SOON_MARKETS=false
+
+# Contracts (Paxeer 80000)
 NEXT_PUBLIC_BALANCE_MANAGER_80000_ADDRESS=0x27aa36368557f938158726f53511Da7CAE1CD23c
 NEXT_PUBLIC_POOL_MANAGER_80000_ADDRESS=0xfceFB9a7bf762baA5e82BAd0E50EAa5eD35AeF40
 NEXT_PUBLIC_GTX_ROUTER_80000_ADDRESS=0x9ED25BA5f6D6F52Eb76ff2d6B4C2AF170593DF70
-PROXY_BALANCEMANAGER=0xfceFB9a7bf762baA5e82BAd0E50EAa5eD35AeF40
-# Token addresses (from POOLS_CREATED and USDC in deployments)
+
+# Tokens
 NEXT_PUBLIC_WETH_ADDRESS=0xD0C1a714c46c364DBDd4E0F7b0B6bA5354460dA7
 NEXT_PUBLIC_WBTC_ADDRESS=0x96465d06640aff1A00888d4b9217C9EaE708C419
 NEXT_PUBLIC_USDC_ADDRESS=0x29E1f94F6b209B57eCdc1fE87448a6d085a78a5a
@@ -33,3 +44,8 @@ NEXT_PUBLIC_TON_ADDRESS=0x9d60b394276e67A44f2d80e1AB7CFafA4e151F02
 NEXT_PUBLIC_USDT_ADDRESS=0x2a401fE7616c4AbA69B147B4B725cE48ca7Ec660
 NEXT_PUBLIC_BNB_ADDRESS=0xb947Bcd6bccE03846ac716fC39A3133c4bF0108e
 NEXT_PUBLIC_SOL_ADDRESS=0x7100cf39FF0E845D7751Fb56198b8Dd16C6Ecb2a
+
+# Optional integrations
+# NEXT_PUBLIC_MAILCHIMP_API_KEY=
+# NEXT_PUBLIC_MAILCHIMP_AUDIENCE_ID=
+# NEXT_PUBLIC_MAILCHIMP_API_SERVER=
