--- a/vercel.json
+++ b/vercel.json
@@ -13,7 +13,7 @@
         { "key": "Permissions-Policy", "value": "camera=(), microphone=(), geolocation=()" },
         {
           "key": "Content-Security-Policy",
-          "value": "default-src 'self'; connect-src 'self' https://orbex-gateway-api.paxeer.app wss://orbex-gateway-api.paxeer.app https://indexer.paxeer.app wss://indexer.paxeer.app https://*.vercel-insights.com; img-src 'self' data: blob: https:; script-src 'self' 'unsafe-inline' 'unsafe-eval' https:; style-src 'self' 'unsafe-inline' https:; font-src 'self' data: https:; frame-ancestors 'none'; base-uri 'self'"
+          "value": "default-src 'self'; connect-src 'self' https://orbex-gateway-api.paxeer.app wss://orbex-gateway-api.paxeer.app https://indexer.paxeer.app wss://indexer.paxeer.app https://v1-rpc.paxeer.app https://cex.paxeer.app wss://cex.paxeer.app https://benchmarks.pyth.network https://rpc.walletconnect.com wss://rpc.walletconnect.com https://explorer-api.walletconnect.com https://pulse.walletconnect.org https://*.walletconnect.com wss://*.walletconnect.com https://*.walletconnect.org wss://*.walletconnect.org https://*.vercel-insights.com; img-src 'self' data: blob: https:; script-src 'self' 'unsafe-inline' 'unsafe-eval' https:; style-src 'self' 'unsafe-inline' https:; font-src 'self' data: https:; frame-ancestors 'none'; base-uri 'self'"
         }
       ]
     },
